--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       </a>
 
       <a href="jlptN1.html" class="category-button">
-        <img src="jlpt.png" alt="JLPT N1">
+        <img src="image/jlpt.png" alt="JLPT N1">
         <div class="category-info">
           <div class="category-title">JLPT N1</div>
           <div class="category-desc">Challenge yourself with N1 terms</div>
