--- a/jlptN1.html
+++ b/jlptN1.html
@@ -91,7 +91,7 @@
     // Load the words from the JSON file
     async function loadWords() {
       try {
-        const res = await fetch('jlptn1.json');
+        const res = await fetch('jlptN1.json');
         if (!res.ok) {
           throw new Error('Network response was not ok');
         }
