--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
         </div>
       </a>
 
-      <a href="jlptN1.html" class="category-button">
-        <img src="image/jlpt.png" alt="JLPT N1">
+      <a href="jlpt.html" class="category-button">
+        <img src="image/jlpt.png" alt="JLPT">
         <div class="category-info">
           <div class="category-title">JLPT N1</div>
           <div class="category-desc">Challenge yourself with N1 terms</div>
