--- a/jlpt.html
+++ b/jlpt.html
@@ -34,7 +34,7 @@
 <body>
     <div class="container">
         <h1>Choose JLPT Level</h1>
-        <button onclick="alert('You clicked JLPT N1')">JLPT N1</button>
+        <button onclick="window.location.href='jlpt_n1.html'">JLPT N1</button>
         <button onclick="alert('You clicked JLPT N2')">JLPT N2</button>
         <button onclick="alert('You clicked JLPT N3')">JLPT N3</button>
         <button onclick="alert('You clicked JLPT N4')">JLPT N4</button>
