--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       <a href="jlpt.html" class="category-button">
         <img src="image/jlpt.png" alt="JLPT">
         <div class="category-info">
-          <div class="category-title">JLPT N1</div>
+          <div class="category-title">JLPT</div>
           <div class="category-desc">Challenge yourself with N1 terms</div>
         </div>
       </a>
