--- a/jlptN1answers.html
+++ b/jlptN1answers.html
@@ -84,12 +84,12 @@
     }
 
     // Run the function to fetch data on page load
-    fetchjlptN1Data();
+    fetchjlpt_n1Data();
 
     // Go back to the quiz page when the button is clicked
     function goBack() {
       // Navigate back to the quiz page and keep the session progress intact
-      window.location.href = "jlpt_N1.html";
+      window.location.href = "jlpt_n1.html";
     }
   </script>
 
