--- a/jlptN1answers.html
+++ b/jlptN1answers.html
@@ -84,7 +84,7 @@
     }
 
     // Run the function to fetch data on page load
-    fetchjlpt_n1Data();
+    fetchjlptN1Data();
 
     // Go back to the quiz page when the button is clicked
     function goBack() {
