--- a/jlptN1answers.html
+++ b/jlptN1answers.html
@@ -89,7 +89,7 @@
     // Go back to the quiz page when the button is clicked
     function goBack() {
       // Navigate back to the quiz page and keep the session progress intact
-      window.location.href = "jlpt_n1.html";
+      window.location.href = "jlptN1.html";
     }
   </script>
 
