--- a/jlpt.html
+++ b/jlpt.html
@@ -74,7 +74,7 @@
 
     <div class="container">
         <h1>Choose JLPT Level</h1>
-        <a href="jlpt_n1.html" class="button">JLPT N1</a>
+        <a href="jlptN1.html" class="button">JLPT N1</a>
         <a href="jlpt_n2.html" class="button">JLPT N2</a>
         <a href="jlpt_n3.html" class="button">JLPT N3</a>
         <a href="jlpt_n4.html" class="button">JLPT N4</a>
