--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Japanese Typing Game - Main Portal</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
@@ -12,226 +13,306 @@
     html, body {
       margin: 0;
       padding: 0;
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Inter', sans-serif;
       height: 100vh;
-      background-color: #f5f5f5;
+      background-color: #f9f9f9;
+      color: #1f1f1f;
+      overflow-x: hidden; /* Prevent horizontal scrolling */
       transition: background-color 0.3s, color 0.3s;
     }
 
     body {
       display: flex;
+      min-height: 100vh;
+      flex-direction: column;
     }
 
+    /* Logo Container */
+    .logo-container {
+      color: #1c1f26;
+      text-align: left;
+      padding-left: 20px;
+      font-size: 28px;
+      font-weight: 700;
+      letter-spacing: 1.5px;
+      padding-top: 40px;
+      position: relative;
+      z-index: 10;
+      margin-left: 80px; /* Align with the sidebar */
+    }
+
+    /* Sidebar Styling */
     .sidebar {
-      width: 70px;
-      background-color: #4CAF50;
+      width: 80px;
+      background-color: #1c1f26;
       display: flex;
       flex-direction: column;
       align-items: center;
       padding-top: 20px;
       gap: 30px;
+      height: 100%;
+      position: fixed; /* Keeps sidebar fixed */
+      z-index: 10;
     }
 
     .sidebar a {
-      color: white;
+      color: #dcdcdc;
       text-decoration: none;
       display: flex;
       flex-direction: column;
       align-items: center;
       font-size: 12px;
+      transition: color 0.3s;
+    }
+
+    .sidebar a:hover {
+      color: #f0c674;
     }
 
     .sidebar img {
-      width: 30px;
-      height: 30px;
+      width: 28px;
+      height: 28px;
       margin-bottom: 5px;
     }
 
+    /* Main Content Styling */
     .main {
-      flex-grow: 1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 40px;
-      position: relative;
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 40px;
+  margin-left: 60px; /* adjusted from 100px */
+  width: calc(100% - 55px); /* accounts for sidebar width */
+}
+
+    /* Title at the top of the screen */
+    .subtitle {
+      color: #666;
+      font-size: 18px;
+      text-align: center;
+      margin-bottom: 32px;
     }
 
+    /* Container Styling */
     .container {
       text-align: center;
       background-color: #ffffff;
-      border-radius: 12px;
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+      border-radius: 16px;
+      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.08);
       width: 100%;
-      max-width: 800px;
-      padding: 30px;
+      max-width: 1200px; /* Larger container width */
+      padding: 40px;
+      margin-top: 60px; /* Adds space between title and container */
     }
 
-    h1 {
-      font-size: 36px;
-      color: #4CAF50;
-      margin-bottom: 10px;
-    }
-
-    .subtitle {
-      color: #666;
-      margin-bottom: 30px;
-    }
-
+    /* Category Container Styling */
     .category-container {
       display: flex;
-      flex-direction: column;
-      gap: 15px;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      gap: 30px;
+      padding: 10px;
     }
 
     .category-button {
       display: flex;
+      flex-direction: column;
       align-items: center;
-      background-color: #4CAF50;
-      color: white;
-      padding: 15px 20px;
-      border-radius: 8px;
+      background-color: #1c1f26;
+      color: #ffffff;
+      padding: 24px 32px;
+      border-radius: 12px;
       text-decoration: none;
       transition: background-color 0.3s ease, transform 0.2s ease;
+      width: 220px;
+      max-width: 300px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 
     .category-button:hover {
-      background-color: #45a049;
-      transform: scale(1.01);
+      background-color: #2c2f36;
+      transform: translateY(-2px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
     }
 
     .category-button img {
-      width: 50px;
-      height: 50px;
-      margin-right: 20px;
-      flex-shrink: 0;
+      width: 120px; /* Increased image size */
+      height: 120px;
+      margin-bottom: 16px; /* Space between image and text */
     }
 
     .category-info {
-      text-align: left;
+      text-align: center;
     }
 
     .category-title {
-      font-size: 18px;
-      font-weight: bold;
-      margin: 0 0 5px 0;
+      font-size: 22px;
+      font-weight: 600;
+      margin: 0 0 4px 0;
     }
 
     .category-desc {
-      font-size: 14px;
-      color: #e0f2f1;
+      font-size: 16px;
+      color: #cccccc;
     }
 
     .toggle-btn {
       position: fixed;
       top: 20px;
       right: 20px;
-      padding: 10px 16px;
-      background-color: #4CAF50;
-      color: white;
+      padding: 10px 20px;
+      background-color: #1c1f26;
+      color: #ffffff;
       border: none;
       border-radius: 8px;
       cursor: pointer;
       font-size: 14px;
+      transition: background-color 0.3s;
       z-index: 999;
     }
 
-    /* Dark Mode */
+    .toggle-btn:hover {
+      background-color: #2c2f36;
+    }
+
+    /* Dark Mode Styling */
     body.dark-mode {
       background-color: #121212;
-      color: #ffffff;
+      color: #f0f0f0;
     }
 
     body.dark-mode .container {
       background-color: #1e1e1e;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.5);
     }
 
     body.dark-mode .category-button {
-      background-color: #2e7d32;
+      background-color: #2a2d33;
     }
 
     body.dark-mode .category-button:hover {
-      background-color: #388e3c;
+      background-color: #3a3d44;
     }
 
     body.dark-mode h1 {
-      color: #81c784;
+      color: #f0c674;
     }
 
     body.dark-mode .subtitle {
-      color: #aaa;
+      color: #bbbbbb;
     }
 
     body.dark-mode .category-desc {
-      color: #cfcfcf;
+      color: #dddddd;
+    }
+
+    body.dark-mode .toggle-btn {
+      background-color: #2e2e2e;
     }
   </style>
 </head>
 <body>
 
-<div class="sidebar">
-  <a href="settings.html">
-    <img src="img/settings.png" alt="Settings">
-    <span>Settings</span>
-  </a>
-  <a href="leaderboard.html">
-    <img src="img/leaderboard.png" alt="Leaderboard">
-    <span>Ranks</span>
-  </a>
-  <a href="market.html">
-    <img src="img/market.png" alt="Market">
-    <span>Market</span>
-  </a>
-</div>
+  <!-- Logo Container -->
+  <div class="logo-container">
+    <span>JType | Choose Your Journey</span>
+  </div>
 
-<div class="main">
-  <button class="toggle-btn" onclick="toggleDarkMode()">Toggle Theme</button>
+  <!-- Sidebar -->
+  <div class="sidebar">
+    <a href="settings.html">
+      <img src="img/settings.png" alt="Settings">
+      <span>Settings</span>
+    </a>
+    <a href="leaderboard.html">
+      <img src="img/leaderboard.png" alt="Leaderboard">
+      <span>Ranks</span>
+    </a>
+    <a href="market.html">
+      <img src="img/market.png" alt="Market">
+      <span>Market</span>
+    </a>
+  </div>
 
-  <div class="container">
-    <h1>Learn Japanese</h1>
-    <p class="subtitle">Select a category to start your journey:</p>
+  <!-- Main Section -->
+  <div class="main">
+    <button class="toggle-btn" onclick="toggleDarkMode()">Toggle Theme</button>
 
-    <div class="category-container">
-      <a href="animals.html" class="category-button">
-        <img src="image/tree_animals_group.png" alt="Animals">
-        <div class="category-info">
-          <div class="category-title">Animals</div>
-          <div class="category-desc">Practice Japanese animal names</div>
-        </div>
-      </a>
+    <!-- Container -->
+    <div class="container">
+      <div class="category-container">
+        <a href="animals.html" class="category-button">
+          <img src="image/tree_animals_group.png" alt="Animals">
+          <div class="category-info">
+            <div class="category-title">Animals</div>
+            <div class="category-desc">Practice Japanese animal names</div>
+          </div>
+        </a>
 
-      <a href="food.html" class="category-button">
-        <img src="img/food.png" alt="Food">
-        <div class="category-info">
-          <div class="category-title">Food</div>
-          <div class="category-desc">Explore food and cooking words</div>
-        </div>
-      </a>
+        <a href="food.html" class="category-button">
+          <img src="img/food.png" alt="Food">
+          <div class="category-info">
+            <div class="category-title">Food</div>
+            <div class="category-desc">Explore food and cooking words</div>
+          </div>
+        </a>
 
-      <a href="jlptN5.html" class="category-button">
-        <img src="img/n5.png" alt="JLPT N5">
-        <div class="category-info">
-          <div class="category-title">JLPT N5</div>
-          <div class="category-desc">Beginner JLPT vocab practice</div>
-        </div>
-      </a>
+        <a href="jlptN5.html" class="category-button">
+          <img src="img/n5.png" alt="JLPT N5">
+          <div class="category-info">
+            <div class="category-title">JLPT N5</div>
+            <div class="category-desc">Beginner JLPT vocab practice</div>
+          </div>
+        </a>
 
-      <a href="jlpt.html" class="category-button">
-        <img src="image/jlpt.png" alt="JLPT">
-        <div class="category-info">
-          <div class="category-title">JLPT</div>
-          <div class="category-desc">Challenge yourself with N1 terms</div>
-        </div>
-      </a>
+        <a href="jlpt.html" class="category-button">
+          <img src="image/jlpt.png" alt="JLPT">
+          <div class="category-info">
+            <div class="category-title">JLPT</div>
+            <div class="category-desc">Challenge yourself with N1 terms</div>
+          </div>
+        </a>
+
+        <a href="numbers.html" class="category-button">
+          <img src="img/numbers.png" alt="Numbers">
+          <div class="category-info">
+            <div class="category-title">Numbers</div>
+            <div class="category-desc">Learn Japanese number system</div>
+          </div>
+        </a>
+
+        <a href="greetings.html" class="category-button">
+          <img src="img/greetings.png" alt="Greetings">
+          <div class="category-info">
+            <div class="category-title">Greetings</div>
+            <div class="category-desc">Master Japanese greetings and phrases</div>
+          </div>
+        </a>
+
+        <a href="colors.html" class="category-button">
+          <img src="img/colors.png" alt="Colors">
+          <div class="category-info">
+            <div class="category-title">Colors</div>
+            <div class="category-desc">Learn Japanese color names</div>
+          </div>
+        </a>
+
+        <a href="time.html" class="category-button">
+          <img src="img/time.png" alt="Time">
+          <div class="category-info">
+            <div class="category-title">Time</div>
+            <div class="category-desc">Learn about time expressions in Japanese</div>
+          </div>
+        </a>
+      </div>
     </div>
   </div>
-</div>
 
-<script>
-  function toggleDarkMode() {
-    document.body.classList.toggle("dark-mode");
-  }
-</script>
-
+  <script>
+    function toggleDarkMode() {
+      document.body.classList.toggle('dark-mode');
+    }
+  </script>
 </body>
 </html>
