--- a/animals.html
+++ b/animals.html
@@ -5,103 +5,136 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Japanese Typing Practice - Animals</title>
   <style>
-    body {
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
       font-family: Arial, sans-serif;
       background-color: #121212;
       color: white;
-      margin: 0;
-      padding: 20px;
       transition: background-color 0.3s, color 0.3s;
     }
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 20px;
-      background-color: #1e1e1e;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(255, 255, 255, 0.05);
+
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
+
+    .container {
+      width: 100%;
+      max-width: 800px;
+      padding: 40px;
+      background-color: #1e1e1e;
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
     h1 {
       text-align: center;
       color: #4caf50;
+      font-size: 2rem;
+      margin-bottom: 20px;
     }
+
     #word {
-      font-size: 30px;
+      font-size: 2rem;
       text-align: center;
       margin: 20px 0;
     }
+
     #feedback, #score {
       text-align: center;
-      font-size: 18px;
-    }
-    input[type="text"] {
-      font-size: 18px;
-      padding: 10px;
-      width: 100%;
+      font-size: 1.2rem;
       margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 4px;
+    }
+
+    input[type="text"] {
+      font-size: 1.1rem;
+      padding: 12px;
+      width: 100%;
+      max-width: 100%;
+      margin: 10px 0;
+      border: none;
+      border-radius: 6px;
       background-color: #2c2c2c;
       color: white;
     }
+
     input.submitted-correct {
       background-color: #2e7d32;
       border: 2px solid #66bb6a;
     }
+
     input.submitted-incorrect {
       background-color: #b71c1c;
       border: 2px solid #ef5350;
     }
+
     .progress-bar {
       width: 100%;
       background-color: #333;
-      border-radius: 4px;
+      border-radius: 6px;
       height: 20px;
       margin: 10px 0;
     }
-   .progress-bar-inner {
-  height: 100%;
-  background-color: #4caf50;
-  width: 0;
-  border-radius: 4px;
-  transition: width 0.5s ease-out;
-}
+
+    .progress-bar-inner {
+      height: 100%;
+      background-color: #4caf50;
+      width: 0;
+      border-radius: 6px;
+      transition: width 0.5s ease-out;
+    }
+
     .button-container {
       text-align: center;
+      margin-top: 20px;
     }
+
     button {
-      padding: 10px 20px;
-      font-size: 16px;
-      margin-top: 10px;
-      margin-right: 10px;
+      padding: 10px 16px;
+      font-size: 1rem;
+      margin: 6px;
       cursor: pointer;
       background-color: #4caf50;
       color: white;
       border: none;
-      border-radius: 4px;
+      border-radius: 6px;
+      transition: background-color 0.3s, transform 0.2s ease;
     }
+
     button:hover {
-  background-color: #45a049;
-  transform: scale(1.05); /* Slightly grow button when hovered */
-  transition: transform 0.2s ease;
-}
+      background-color: #45a049;
+      transform: scale(1.05);
+    }
+
     button:focus {
-  outline: 2px solid #ff9800; /* Orange outline for accessibility */
-}
+      outline: 2px solid #ff9800;
+    }
+
     button:active {
-  transform: scale(0.98); /* Slightly shrink button when clicked */
-}
+      transform: scale(0.98);
+    }
+
     .dark-mode {
       background-color: #121212;
       color: white;
     }
+
     .light-mode {
       background-color: #ffffff;
       color: black;
     }
+
     .dark-mode .container {
       background-color: #1e1e1e;
     }
+
     .light-mode .container {
       background-color: #f0f0f0;
     }
@@ -120,150 +153,152 @@
     </div>
 
     <div class="button-container">
-  <button onclick="showHint()">Hint</button>
-  <button onclick="skipWord()">Skip</button>
-  <button onclick="replayAudio()">Replay Audio</button> <!-- Add this line -->
-  <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
-  <button onclick="goBackToMainPortal()">Back to Main Portal</button>
-</div>
+      <button onclick="showHint()">Hint</button>
+      <button onclick="skipWord()">Skip</button>
+      <button onclick="replayAudio()">Replay Audio</button>
+      <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
+      <button onclick="goBackToMainPortal()">Back to Main Portal</button>
+    </div>
+  </div>
+
+  <audio id="vocab-audio" src="" preload="auto"></audio>
 
   <script>
-   let words = [];
-let currentIndex = 0;
-let score = 0;
-let isComposing = false;
-let isDarkMode = true;
-const typingSound = new Audio('https://www.soundjay.com/mechanical/keyboard-1.mp3');
-typingSound.volume = 0.2;
+    let words = [];
+    let currentIndex = 0;
+    let score = 0;
+    let isComposing = false;
+    let isDarkMode = true;
+    const typingSound = new Audio('https://www.soundjay.com/mechanical/keyboard-1.mp3');
+    typingSound.volume = 0.2;
 
-const input = document.getElementById('answer');
-input.addEventListener('input', () => {
-  typingSound.currentTime = 0;
-  typingSound.play();
-});
-input.addEventListener('compositionstart', () => isComposing = true);
-input.addEventListener('compositionend', () => isComposing = false);
-input.addEventListener('keydown', (e) => {
-  if (e.key === 'Enter' && !isComposing) checkAnswer();
-});
+    const input = document.getElementById('answer');
+    input.addEventListener('input', () => {
+      typingSound.currentTime = 0;
+      typingSound.play();
+    });
+    input.addEventListener('compositionstart', () => isComposing = true);
+    input.addEventListener('compositionend', () => isComposing = false);
+    input.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter' && !isComposing) checkAnswer();
+    });
 
-async function loadAnimals() {
-  const res = await fetch('animals.json');
-  words = await res.json();
+    async function loadAnimals() {
+      const res = await fetch('animals.json');
+      words = await res.json();
 
-  const savedProgress = JSON.parse(sessionStorage.getItem("quizProgress"));
-  if (savedProgress) {
-    currentIndex = savedProgress.currentIndex || 0;
-    score = savedProgress.score || 0;
-  } else {
-    shuffleWords(words);
-  }
+      const savedProgress = JSON.parse(sessionStorage.getItem("quizProgress"));
+      if (savedProgress) {
+        currentIndex = savedProgress.currentIndex || 0;
+        score = savedProgress.score || 0;
+      } else {
+        shuffleWords(words);
+      }
 
-  updateScore();
-  updateProgressBar();
-  showWord();
-}
+      updateScore();
+      updateProgressBar();
+      showWord();
+    }
 
-function showWord() {
-  const word = words[currentIndex];
-  document.getElementById('word').textContent = word.english;
-  input.value = '';
-  input.classList.remove('submitted-correct', 'submitted-incorrect');
-  document.getElementById('feedback').textContent = '';
-  input.disabled = false;
-  input.focus();
+    function showWord() {
+      const word = words[currentIndex];
+      document.getElementById('word').textContent = word.english;
+      input.value = '';
+      input.classList.remove('submitted-correct', 'submitted-incorrect');
+      document.getElementById('feedback').textContent = '';
+      input.disabled = false;
+      input.focus();
 
-  playAudio(word.japanese); // Play vocab audio
-}
+      playAudio(word.japanese);
+    }
 
-function playAudio(japaneseWord) {
-  const audio = document.getElementById('vocab-audio');
-  audio.src = `audio/${japaneseWord}.mp3`;
-  audio.play().catch(err => {
-    console.warn(`Could not play audio for: ${japaneseWord}`, err);
-  });
-}
+    function playAudio(japaneseWord) {
+      const audio = document.getElementById('vocab-audio');
+      audio.src = `audio/${japaneseWord}.mp3`;
+      audio.play().catch(err => {
+        console.warn(`Could not play audio for: ${japaneseWord}`, err);
+      });
+    }
 
-function replayAudio() {
-  const word = words[currentIndex];
-  playAudio(word.japanese);
-}
+    function replayAudio() {
+      const word = words[currentIndex];
+      playAudio(word.japanese);
+    }
 
-function shuffleWords(array) {
-  for (let i = array.length - 1; i > 0; i--) {
-    const j = Math.floor(Math.random() * (i + 1));
-    [array[i], array[j]] = [array[j], array[i]];
-  }
-}
+    function shuffleWords(array) {
+      for (let i = array.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
+      }
+    }
 
-function checkAnswer() {
-  const userInput = input.value.trim();
-  const currentWord = words[currentIndex];
-  if (currentWord.answers.includes(userInput)) {
-    input.classList.add('submitted-correct');
-    score++;
-    currentIndex++;
-    setTimeout(() => {
+    function checkAnswer() {
+      const userInput = input.value.trim();
+      const currentWord = words[currentIndex];
+      if (currentWord.answers.includes(userInput)) {
+        input.classList.add('submitted-correct');
+        score++;
+        currentIndex++;
+        setTimeout(() => {
+          saveProgress();
+          window.location.href = `animalsanswer.html?answer=${encodeURIComponent(currentWord.japanese)}&definition=${encodeURIComponent(currentWord.english)}`;
+        }, 500);
+      } else {
+        input.classList.add('submitted-incorrect');
+        document.getElementById('feedback').textContent = '❌ Try again!';
+      }
+      updateScore();
+    }
+
+    function skipWord() {
+      const word = words[currentIndex];
+      currentIndex++;
       saveProgress();
-      window.location.href = `animalsanswer.html?answer=${encodeURIComponent(currentWord.japanese)}&definition=${encodeURIComponent(currentWord.english)}`;
-    }, 500);
-  } else {
-    input.classList.add('submitted-incorrect');
-    document.getElementById('feedback').textContent = '❌ Try again!';
-  }
-  updateScore();
-}
+      window.location.href = `animalsanswer.html?answer=${encodeURIComponent(word.japanese)}&definition=${encodeURIComponent(word.english)}`;
+    }
 
-function skipWord() {
-  const word = words[currentIndex];
-  currentIndex++;
-  saveProgress();
-  window.location.href = `animalsanswer.html?answer=${encodeURIComponent(word.japanese)}&definition=${encodeURIComponent(word.english)}`;
-}
+    function showHint() {
+      const word = words[currentIndex];
+      const hint = word.japanese ? word.japanese.charAt(0) : '?';
+      document.getElementById('feedback').textContent = `Hint: Starts with 「${hint}」`;
+    }
 
-function showHint() {
-  const word = words[currentIndex];
-  const hint = word.japanese ? word.japanese.charAt(0) : '?';
-  document.getElementById('feedback').textContent = `Hint: Starts with 「${hint}」`;
-}
+    function updateScore() {
+      document.getElementById('score').textContent = `Score: ${score} / ${words.length}`;
+    }
 
-function updateScore() {
-  document.getElementById('score').textContent = `Score: ${score} / ${words.length}`;
-}
+    function updateProgressBar() {
+      const progress = (currentIndex / words.length) * 100;
+      document.getElementById('progress-bar').style.width = `${progress}%`;
+    }
 
-function updateProgressBar() {
-  const progress = (currentIndex / words.length) * 100;
-  document.getElementById('progress-bar').style.width = `${progress}%`;
-}
+    function toggleDarkMode() {
+      isDarkMode = !isDarkMode;
+      document.body.classList.toggle('dark-mode', isDarkMode);
+      document.body.classList.toggle('light-mode', !isDarkMode);
+    }
 
-function toggleDarkMode() {
-  isDarkMode = !isDarkMode;
-  document.body.classList.toggle('dark-mode', isDarkMode);
-  document.body.classList.toggle('light-mode', !isDarkMode);
-}
+    function saveProgress() {
+      const progress = {
+        currentIndex: currentIndex,
+        score: score
+      };
+      sessionStorage.setItem("quizProgress", JSON.stringify(progress));
+    }
 
-function saveProgress() {
-  const progress = {
-    currentIndex: currentIndex,
-    score: score
-  };
-  sessionStorage.setItem("quizProgress", JSON.stringify(progress));
-}
+    function goBackToMainPortal() {
+      const button = document.querySelector('button');
+      button.textContent = "Returning to Main Portal...";
+      button.disabled = true;
+      button.style.cursor = 'not-allowed';
+      document.body.style.opacity = 0;
+      setTimeout(() => {
+        window.location.href = 'index.html';
+      }, 500);
+    }
 
-function goBackToMainPortal() {
-  const button = document.querySelector('button');
-  button.textContent = "Returning to Main Portal...";
-  button.disabled = true;
-  button.style.cursor = 'not-allowed';
-  document.body.style.opacity = 0;
-  setTimeout(() => {
-    window.location.href = 'index.html';
-  }, 500);
-}
-
-// Initial load
-loadAnimals();
+    // Initial load
+    loadAnimals();
   </script>
-<audio id="vocab-audio" src="" preload="auto"></audio>
 </body>
 </html>
