--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
         <a href="jlptN5.html" class="category-button">
           <img src="img/n5.png" alt="JLPT N5">
           <div class="category-info">
-            <div class="category-title">JLPT N5</div>
-            <div class="category-desc">Beginner JLPT vocab practice</div>
+            <div class="category-title">Useful Phrases</div>
+            <div class="category-desc">Phrases you can use in daily life</div>
           </div>
         </a>
 
