--- a/animals.html
+++ b/animals.html
@@ -3,302 +3,104 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Japanese Typing Practice - Animals</title>
+  <title>Answer Page</title>
   <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
+    body {
       font-family: Arial, sans-serif;
       background-color: #121212;
-      color: white;
-      transition: background-color 0.3s, color 0.3s;
-    }
-
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .container {
-      width: 100%;
-      max-width: 800px;
-      padding: 40px;
-      background-color: #1e1e1e;
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
+      color: #f0f0f0;
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
     }
-
-    h1 {
+    .card {
+      background-color: #1e1e1e;
+      padding: 40px;
+      border-radius: 12px;
       text-align: center;
-      color: #4caf50;
-      font-size: 2rem;
-      margin-bottom: 20px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.5);
+      max-width: 500px;
     }
-
-    #word {
-      font-size: 2rem;
-      text-align: center;
-      margin: 20px 0;
+    .japanese {
+      font-size: 48px;
+      margin-bottom: 10px;
     }
-
-    #feedback, #score {
-      text-align: center;
-      font-size: 1.2rem;
-      margin: 10px 0;
+    .english {
+      font-size: 24px;
+      color: #aaa;
+      margin-bottom: 10px;
     }
-
-    input[type="text"] {
-      font-size: 1.1rem;
-      padding: 12px;
-      width: 100%;
-      max-width: 100%;
-      margin: 10px 0;
-      border: none;
-      border-radius: 6px;
-      background-color: #2c2c2c;
-      color: white;
+    .definition {
+      font-size: 18px;
+      color: #ccc;
     }
-
-    input.submitted-correct {
-      background-color: #2e7d32;
-      border: 2px solid #66bb6a;
-    }
-
-    input.submitted-incorrect {
-      background-color: #b71c1c;
-      border: 2px solid #ef5350;
-    }
-
-    .progress-bar {
-      width: 100%;
-      background-color: #333;
-      border-radius: 6px;
-      height: 20px;
-      margin: 10px 0;
-    }
-
-    .progress-bar-inner {
-      height: 100%;
-      background-color: #4caf50;
-      width: 0;
-      border-radius: 6px;
-      transition: width 0.5s ease-out;
-    }
-
-    .button-container {
-      text-align: center;
-      margin-top: 20px;
-    }
-
     button {
-      padding: 10px 16px;
-      font-size: 1rem;
-      margin: 6px;
-      cursor: pointer;
+      margin-top: 30px;
+      padding: 12px 24px;
       background-color: #4caf50;
       color: white;
       border: none;
       border-radius: 6px;
-      transition: background-color 0.3s, transform 0.2s ease;
+      font-size: 16px;
+      cursor: pointer;
     }
-
     button:hover {
       background-color: #45a049;
-      transform: scale(1.05);
-    }
-
-    button:focus {
-      outline: 2px solid #ff9800;
-    }
-
-    button:active {
-      transform: scale(0.98);
-    }
-
-    .dark-mode {
-      background-color: #121212;
-      color: white;
-    }
-
-    .light-mode {
-      background-color: #ffffff;
-      color: black;
-    }
-
-    .dark-mode .container {
-      background-color: #1e1e1e;
-    }
-
-    .light-mode .container {
-      background-color: #f0f0f0;
     }
   </style>
 </head>
-<body class="dark-mode">
-  <div class="container">
-    <h1>Japanese Typing Practice - Animals</h1>
-    <div id="word"></div>
-    <input type="text" id="answer" placeholder="Type your answer here" autocomplete="off" />
-    <div id="feedback"></div>
-    <div id="score">Score: 0 / 0</div>
+<body>
 
-    <div class="progress-bar">
-      <div id="progress-bar" class="progress-bar-inner"></div>
-    </div>
-
-    <div class="button-container">
-      <button onclick="showHint()">Hint</button>
-      <button onclick="skipWord()">Skip</button>
-      <button onclick="replayAudio()">Replay Audio</button>
-      <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
-      <button onclick="goBackToMainPortal()">Back to Main Portal</button>
-    </div>
+  <div class="card">
+    <div class="japanese" id="japanese">...</div>
+    <div class="english" id="english">...</div>
+    <div class="definition" id="definition">...</div>
+    <button onclick="goBack()">Continue</button>
   </div>
 
-  <audio id="vocab-audio" src="" preload="auto"></audio>
-
   <script>
-    let words = [];
-    let currentIndex = 0;
-    let score = 0;
-    let isComposing = false;
-    let isDarkMode = true;
-    const typingSound = new Audio('https://www.soundjay.com/mechanical/keyboard-1.mp3');
-    typingSound.volume = 0.2;
+    const urlParams = new URLSearchParams(window.location.search);
+    const answer = urlParams.get("answer");
 
-    const input = document.getElementById('answer');
-    input.addEventListener('input', () => {
-      typingSound.currentTime = 0;
-      typingSound.play();
-    });
-    input.addEventListener('compositionstart', () => isComposing = true);
-    input.addEventListener('compositionend', () => isComposing = false);
-    input.addEventListener('keydown', (e) => {
-      if (e.key === 'Enter' && !isComposing) checkAnswer();
-    });
+    async function fetchAnimalsData() {
+      try {
+        const response = await fetch("animals.json");
+        const animals = await response.json();
 
-    async function loadAnimals() {
-      const res = await fetch('animals.json');
-      words = await res.json();
+        // Match against any item where answer is included in the answers array
+        const wordData = animals.find(item =>
+          item.answers.includes(answer)
+        );
 
-      const savedProgress = JSON.parse(sessionStorage.getItem("quizProgress"));
-      if (savedProgress) {
-        currentIndex = savedProgress.currentIndex || 0;
-        score = savedProgress.score || 0;
-      } else {
-        shuffleWords(words);
-      }
+        if (wordData) {
+          document.getElementById("japanese").textContent = wordData.japanese || "No answer found";
+          document.getElementById("english").textContent = wordData.english || "No translation found";
+          document.getElementById("definition").textContent = wordData.definition || "No definition found";
 
-      updateScore();
-      updateProgressBar();
-      showWord();
-    }
-
-    function showWord() {
-      const word = words[currentIndex];
-      document.getElementById('word').textContent = word.english;
-      input.value = '';
-      input.classList.remove('submitted-correct', 'submitted-incorrect');
-      document.getElementById('feedback').textContent = '';
-      input.disabled = false;
-      input.focus();
-
-      playAudio(word.japanese);
-    }
-
-    function playAudio(japaneseWord) {
-      const audio = document.getElementById('vocab-audio');
-      audio.src = `audio/${japaneseWord}.mp3`;
-      audio.play().catch(err => {
-        console.warn(`Could not play audio for: ${japaneseWord}`, err);
-      });
-    }
-
-    function replayAudio() {
-      const word = words[currentIndex];
-      playAudio(word.japanese);
-    }
-
-    function shuffleWords(array) {
-      for (let i = array.length - 1; i > 0; i--) {
-        const j = Math.floor(Math.random() * (i + 1));
-        [array[i], array[j]] = [array[j], array[i]];
+          // Store the current word for reference
+          sessionStorage.setItem("lastAnswer", JSON.stringify(wordData));
+        } else {
+          document.getElementById("japanese").textContent = "Word not found";
+          document.getElementById("english").textContent = "";
+          document.getElementById("definition").textContent = "";
+        }
+      } catch (error) {
+        console.error("Error fetching animals.json:", error);
+        document.getElementById("japanese").textContent = "Error";
+        document.getElementById("english").textContent = "Could not load data";
+        document.getElementById("definition").textContent = "";
       }
     }
 
-    function checkAnswer() {
-      const userInput = input.value.trim();
-      const currentWord = words[currentIndex];
-      if (currentWord.answers.includes(userInput)) {
-        input.classList.add('submitted-correct');
-        score++;
-        currentIndex++;
-        setTimeout(() => {
-          saveProgress();
-          window.location.href = `animalsanswer.html?answer=${encodeURIComponent(currentWord.japanese)}&definition=${encodeURIComponent(currentWord.english)}`;
-        }, 500);
-      } else {
-        input.classList.add('submitted-incorrect');
-        document.getElementById('feedback').textContent = '❌ Try again!';
-      }
-      updateScore();
-    }
+    fetchAnimalsData();
 
-    function skipWord() {
-      const word = words[currentIndex];
-      currentIndex++;
-      saveProgress();
-      window.location.href = `animalsanswer.html?answer=${encodeURIComponent(word.japanese)}&definition=${encodeURIComponent(word.english)}`;
+    function goBack() {
+      window.location.href = "animals.html";
     }
-
-    function showHint() {
-      const word = words[currentIndex];
-      const hint = word.japanese ? word.japanese.charAt(0) : '?';
-      document.getElementById('feedback').textContent = `Hint: Starts with 「${hint}」`;
-    }
-
-    function updateScore() {
-      document.getElementById('score').textContent = `Score: ${score} / ${words.length}`;
-    }
-
-    function updateProgressBar() {
-      const progress = (currentIndex / words.length) * 100;
-      document.getElementById('progress-bar').style.width = `${progress}%`;
-    }
-
-    function toggleDarkMode() {
-      isDarkMode = !isDarkMode;
-      document.body.classList.toggle('dark-mode', isDarkMode);
-      document.body.classList.toggle('light-mode', !isDarkMode);
-    }
-
-    function saveProgress() {
-      const progress = {
-        currentIndex: currentIndex,
-        score: score
-      };
-      sessionStorage.setItem("quizProgress", JSON.stringify(progress));
-    }
-
-    function goBackToMainPortal() {
-      const button = document.querySelector('button');
-      button.textContent = "Returning to Main Portal...";
-      button.disabled = true;
-      button.style.cursor = 'not-allowed';
-      document.body.style.opacity = 0;
-      setTimeout(() => {
-        window.location.href = 'index.html';
-      }, 500);
-    }
-
-    // Initial load
-    loadAnimals();
   </script>
+
 </body>
 </html>
